<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    app:navGraph="@navigation/nav_graph"
    tools:context=".ui.views.settings.SettingsBottomSheetFragment">

    <View
        android:id="@+id/view"
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:background="@drawable/round_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="RtlSymmetry,UseCompoundDrawables">

        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/login_icon_description"
            android:src="@drawable/ic_login" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:letterSpacing=".03"
            android:text="@string/settings_login_label"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/what_we_measure_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="22dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_container"
        tools:ignore="RtlSymmetry,UseCompoundDrawables">

        <ImageView
            android:id="@+id/what_we_measure_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/measurement_icon_description"
            android:src="@drawable/ic_measuring" />

        <TextView
            android:id="@+id/what_we_measure_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:letterSpacing=".03"
            android:text="@string/settings_measurement_label"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/what_we_measure_container"
        tools:ignore="RtlSymmetry,UseCompoundDrawables">

        <ImageView
            android:id="@+id/contact_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/contact_icon_description"
            android:src="@drawable/ic_contact" />

        <TextView
            android:id="@+id/contact_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:letterSpacing=".03"
            android:text="@string/settings_contact_label"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/faqs_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_container"
        tools:ignore="RtlSymmetry,UseCompoundDrawables">

        <ImageView
            android:id="@+id/faqs_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/faqs_icon_description"
            android:src="@drawable/ic_faqs" />

        <TextView
            android:id="@+id/faqs_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:letterSpacing=".03"
            android:text="@string/settings_faqs_label"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacy_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faqs_container"
        tools:ignore="RtlSymmetry,UseCompoundDrawables">

        <ImageView
            android:id="@+id/privacy_terms_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/legal_terms_icon_description"
            android:src="@drawable/ic_terms" />

        <TextView
            android:id="@+id/privacy_terms_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:letterSpacing=".03"
            android:text="@string/settings_legal_terms_label"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/app_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacy_terms"
        tools:ignore="RtlSymmetry,UseCompoundDrawables">

        <ImageView
            android:id="@+id/app_info_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/about_icon_description"
            android:src="@drawable/ic_about" />

        <TextView
            android:id="@+id/app_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:letterSpacing=".03"
            android:text="@string/settings_about_label"
            android:textAlignment="center"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <!--TextView
        android:id="@+id/app_version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:letterSpacing=".05"
        android:text="@string/app_version"
        android:textAlignment="center"
        android:textColor="@color/grayDivider"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_info" /-->
</androidx.constraintlayout.widget.ConstraintLayout>